--- a/resources/assets/css/post.css
+++ b/resources/assets/css/post.css
@@ -1,3 +1,13 @@
+.post-container {
+  background-color: #111312;
+  box-shadow: 0px 0px 7px #336655;
+  color: white;
+  margin: 30px;
+  padding: 20px;
+  max-width: 100%;
+  border-radius: 10px;
+}
+
 .comment-box {
   padding: 10px;
   margin: 40px 0px 0px 50px;
